--- a/public/css/shared/servicios.css
+++ b/public/css/shared/servicios.css
@@ -1,18 +1,145 @@
+@import url('https://fonts.googleapis.com/css2?family=Proxima+Nova:wght@400;700&display=swap');
+
 * {
     box-sizing: border-box;
-    font-family: 'Proxima-Nova-Regular';
-    color: #5F5F5F;
-
-}
-i{
-    color:  hsl(216deg, 85%, 34%);
-}
-body {
-    background-color: #F5F5F5;
-    ;
-}
-
-figure {
+    font-family: 'Proxima Nova', sans-serif;
     margin: 0;
-    padding: 0;
+}
+
+body {
+    background-color: #ffffff;
+}
+
+.main__service{
+    margin-top: 70px; /* Ajusta esto según la altura del header */
+    margin-bottom: 70px;
+}
+
+.services__text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Proxima-Nova', sans-serif;
+    text-align: center;
+    padding-top: 2rem;
+    margin-bottom: 2.5rem;
+
+}
+
+.services__text h2{
+    color: #1b4092;
+    margin-bottom: 0.75rem;
+    font-size: 40px;
+    text-align: center;
+    font-weight: 900;
+    line-height: 1.2;
+}
+
+.services__text p{
+    color: #828282;
+    font-size: 16px;
+    width: 80%;
+    text-align: center;
+    font-style: normal;
+    line-height: 1.4;
+}
+
+.services__content{
+    width: 70%;
+    max-width: 1200px;
+    margin:0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.services__cards{
+    display: flex;
+    flex-direction: column;
+}
+
+.service__card{
+    color: #828282;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 2.5rem;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.30);
+    border-radius: 5px;
+    background-color: #ffffff;
+    overflow: hidden;
+}
+
+
+.service__card h3{
+    color: #1b4092;
+    font-size: 16px;
+    margin-top: 0.75rem;
+    margin-bottom: 0.5rem;
+}
+
+.service__card p{
+    font-size: 14px;
+}
+
+.service__card p{
+    margin-top: 0.25rem;
+    line-height: 1.4;
+}
+
+.service__card__content__paragraph{
+    margin-bottom: 14px;
+}
+
+.service__card img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.service__link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+
+/* Estilos para vista de escritorio */
+@media screen and (min-width: 756px) {
+
+    .service__card__content__subtitle{
+        text-align: start;
+        padding-inline: 24px;
+    }
+
+    .service__card__content__paragraph{
+        text-align: start;
+        padding-inline: 24px;
+        margin-bottom: 14px;
+    }
+
+    .services__text p{
+        font-size: 16px;
+        width: 600px;
+    }
+
+    .services__text {
+        margin-bottom: 3rem;
+    }
+
+    .services__content{
+        gap: 2rem;
+    }
+
+    .services__cards {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2.5rem;
+        margin-bottom: 0;
+    }
+
+    .service__card {
+        margin-bottom: 0;
+    }
+
 }
