--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -8,16 +8,42 @@
     }
 
 
-    html{
+    html {
         scroll-behavior: smooth;
     }
+
+
+
 
     /* ===== Sección del Slider ===== */
 
     .hero-section {
+        height: 70vh;
         position: relative;
-        height: 100vh;
         overflow: hidden;
+        z-index: 1;
+
+    }
+
+    /* Superposición de desvanecimiento */
+    .hero-section::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100px;
+        background: linear-gradient(to bottom, rgba(71, 7, 7, 0) 50%, #88b8c2 100%);
+        z-index: 2;
+
+        pointer-events: none;
+    }
+
+
+
+
+    .titles-section {
+        top: 40%;
     }
 
     .hero_container {
@@ -25,79 +51,182 @@
     }
 
     .carousel-item {
-        height: 100vh;
+        height: 70vh;
     }
 
     .carousel-item img {
         object-fit: cover;
         height: 100%;
         width: 100%;
+        transition: transform 0.5s ease;
     }
 
-    .titles-section {
-        z-index: 10;
-        color: rgb(239, 246, 255);
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    .carousel-item.active img {
+        transform: scale(1.05);
+
     }
 
-    .contact-title {
-        font-size: 4rem;
+    .titles-section h2.contact-title {
+        font-size: 5rem;
         font-weight: bold;
-        margin-bottom: 1rem;
+        display: inline-block;
+        color: #ffffff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+        cursor: pointer;
+        transition: transform 0.3s ease, font-size 0.3s ease;
+
     }
 
-    .contact-subtitle {
-        font-size: 1.5rem;
-        margin-bottom: 2rem;
+    .contact-title:hover {
+        transform: scale(1.1);
+        font-size: 2.7rem;
     }
+    .scroll-down-indicator {
+        position: absolute;
+        bottom: 90px;
+        left: 50%;
+        transform: translateX(-50%); /* Mantiene el centrado horizontal */
+        font-size: 3.5rem;
+        color: white;
+        cursor: pointer;
+        animation: bounce 2s ease-in-out 3; /* Se repetirá 3 veces */
+        animation-fill-mode: forwards; /* Mantiene la posición final después de la animación */
+    }
+    
+    @keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+            transform: translateX(-50%) translateY(0); /* Mantiene la posición centrada y rebote en Y */
+        }
+    
+        40% {
+            transform: translateX(-50%) translateY(-4px); /* Rebote hacia arriba */
+        }
+    
+        60% {
+            transform: translateX(-50%) translateY(-2px); /* Rebote más ligero hacia arriba */
+        }
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+    /* ===== Estilo para el subtítulo debajo del slider ===== */
+    .subtitle-container {
+        background: #88b8c2;
+        padding: 7vh;
+        box-shadow: 0px 4px 8px #88b8c2(39, 208, 214, 0.692);
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+            transform: translateY(0px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    .contact-highlight {
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: white;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        letter-spacing: 1px;
+        opacity: 0;
+        animation: fadeIn 2s ease-out 1s forwards;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     /* ===== Sección de Contacto ===== */
     .contact {
-        padding: 50px 0;
+        padding-top: 100px;
+        padding-bottom: 50px;
+        box-shadow: 0 0px 200px #6889b6;
+
     }
+
 
     .contact-container {
         background-color: #ffffff;
-        border-radius: 20px;
-        box-shadow: 0 4px 50px rgba(0, 0, 0, 0.171);
+        border-radius: 10px;
         overflow: hidden;
+        margin-bottom: 50px;
     }
 
+
+    /* Ajustar la columna izquierda para que tenga una imagen de fondo */
     .contact-left {
-        background-color: #006400;
-        padding: 40px;
-        border-radius: 20px;
-        overflow: hidden;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        color: white;
+        text-align: center;
         position: relative;
     }
 
-    .contact-left::before,
-    .contact-left::after {
+    .contact-left::before {
         content: '';
         position: absolute;
-        background-color: #1E52CA;
-        border-radius: 50%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-image: url('../public/imagenes/contacto/Contacto1.webp');
+        background-size: cover;
+        background-position: center;
+        opacity: 0.2;
         z-index: 0;
     }
 
-    .contact-left h3,
-    .contact-left img {
+    .contact-left-content {
         position: relative;
         z-index: 1;
     }
 
-    .contact-left img {
+    .contact-left .image-container img {
+        max-width: 80%;
+        height: auto;
         display: block;
         margin: 0 auto;
     }
 
+
     .contact-right {
         padding: 40px;
+        background-color: #ffffff;
+
     }
 
-    .contact-right .row {
-        margin-bottom: 20px;
-    }
 
     .contact-form {
         background-color: #ffffff;
@@ -108,6 +237,21 @@
     }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     /* Estilos para los inputs */
     .form-control {
         border: none;
@@ -115,162 +259,136 @@
         border-radius: 0;
         padding: 10px 0;
         background-color: transparent;
+        font-size: 0.9rem;
     }
 
     .form-control:focus {
         box-shadow: none;
-        border-color: #28a745;
+        border-color: #0e4b9c;
     }
 
     /* Estilo para el textarea */
     textarea.form-control {
         border: 1px solid #ccc;
-        padding: 10px;
+        padding: 20px;
+    }
+
+    .form-control:focus {
+        box-shadow: 0 0 0px rgba(14, 76, 156, 0.5);
+        border-color: #0e4b9c;
+        transition: box-shadow 0.5s ease, border-color 0.5s ease;
+    }
+
+
+
+    .form-group {
+        margin-bottom: 20px;
     }
 
     .form-group label {
-        font-weight: bold;
+        font-weight: 600;
+        font-size: 0.9rem;
+        margin-bottom: 10px;
+        color: #333;
     }
 
     input {
         width: 100%;
-        padding: 10px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
+        padding: 10px 0;
+        border: none;
+        border-bottom: 1px solid #ccc;
+        border-radius: 0;
+        font-size: 0.9rem;
     }
 
-    
 
-    button {
+
+
+
+
+
+
+
+
+
+
+
+    /* Estilos actualizados para el botón y su contenedor */
+
+    .button-container {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 20px;
+    }
+
+    .btn-success.btn-small.custom-btn {
+        width: auto;
+        min-width: 120px;
         padding: 10px 20px;
-        background-color: #3A6AD8;
-        color: white;
+        font-size: 0.9rem;
+        font-weight: bold;
+        background-color: #0e4c9c;
         border: none;
         border-radius: 4px;
+        color: white;
         cursor: pointer;
-        width: 100%;
+        transition: background-color 1.0s ease;
     }
 
-    button:hover {
+
+    .btn-success.btn-small.custom-btn:hover {
         background-color: #2a52b0;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+        transform: translateY(-1px);
     }
 
-    .btn-success {
-        background-color: #28a745;
-        border-color: #28a745;
-    }
 
-    .btn-small {
-        padding: 5px 10px;
-        font-size: 14px;
-        width: auto;
-        height: auto;
-    }
-    .custom-btn {
-        width: 120px; 
-        margin-right: 0;
-    }
+
+
+
+
+
+
+
 
 
 
 
     /* ===== Media Queries ===== */
 
-    @media screen and (max-width: 968px) {
+    @media screen and (max-width: 768px) {
+        .hero-section {
+            height: 50vh;
+            /* Ajusta si es necesario */
+        }
 
         .titles-section {
-            padding: 0 20px;
+            top: 30%;
+            /* Ajusta si el título está demasiado alto o bajo */
         }
 
         .contact-title {
-            font-size: 2.5rem;
+            font-size: 3rem;
+            /* Ajusta el tamaño del título si es necesario */
         }
 
         .contact-subtitle {
-            font-size: 1.2rem;
-        }
-
-        .contact-left,
-        .contact-right {
-            padding: 20px;
+            font-size: 1.3rem;
+            /* Ajusta el tamaño del subtítulo */
         }
 
         .contact-left h3 {
             font-size: 1.5rem;
-        }
-
-        .contact-left img {
-            width: 100%;
+            /* Ajusta el tamaño del texto en la columna izquierda */
         }
 
         .contact-right {
-            padding: 20px;
+            padding: 15px;
+            /* Ajusta el padding si es necesario */
         }
 
         .contact-form {
-            padding: 20px;
-        }
-
-        .contact-container {
-            box-shadow: none;
-        }
-    }
-
-    @media screen and (max-width: 425px) {
-
-        .custom-btn {
-            width: 100%; 
-            text-align: left;
-        }
-        
-        .titles-section {
-            padding: 0 15px;
-        }
-
-        .contact-title {
-            font-size: 1.8rem;
-        }
-
-        .contact-subtitle {
-            font-size: 1rem;
-        }
-
-        .contact-left,
-        .contact-right {
-            padding: 10px;
-        }
-
-        .contact-left h3 {
-            font-size: 1.2rem;
-        }
-
-        .contact-left img {
-            width: 100%;
-        }
-
-        .contact-right {
-            padding: 10px;
-        }
-
-        .contact-form {
-            padding: 10px;
-        }
-
-        .contact-container {
-            box-shadow: none;
-            padding: 0;
-        }
-
-        .form-group label {
-            font-size: 0.9rem;
-        }
-
-        input {
-            font-size: 0.9rem;
-        }
-
-        button {
-            padding: 8px 16px;
-            font-size: 0.9rem;
+            padding: 15px;
+            /* Ajusta el padding del formulario */
         }
     }
