--- a/admin/public/css/login.css
+++ b/admin/public/css/login.css
@@ -17,6 +17,10 @@ body, html {
     align-items: center;
 }
 
+.right{
+    flex-direction: column;
+}
+
 .left {
     background-color: #0056b3;
     color: white;
@@ -108,6 +112,13 @@ body, html {
 .register a {
     color: #0056b3;
     text-decoration: none;
+}
+
+.linkt-div{
+    display: flex;
+}
+.link-index{
+    margin-left: auto;
 }
 
 /* Responsive Design */
