--- a/public/css/shared/footer.css
+++ b/public/css/shared/footer.css
@@ -35,6 +35,7 @@ html, body {
     border-radius: 20px;
     width: 230px;
     box-shadow: 0 2px 4px #000;
+    text-decoration: none;
 }
 .btn-visualizerh:hover{
     background-color: #D1D2D4;
