--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -12,7 +12,7 @@ input[type=number]::-webkit-outer-spin-button {
 /* Hero */
 .hero_container {
     width: 100%;
-    height: 300px;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -37,11 +37,6 @@ html {
 }
 
 
-
-
-
-
-
 /* Superposición de desvanecimiento */
 .hero-section::after {
     content: "";
@@ -64,28 +59,86 @@ html {
 
 
 .titles-section {
-    top: 40%;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 3; /* Para que el título quede sobre el slider */
+    position: absolute;
+    width: 100%;
+    text-align: center;
 }
 
-.hero_container {
-    height: 100%;
-}
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Animación del Slider */
 .carousel-item {
     height: 70vh;
+    opacity: 0;
+    transition: opacity 0s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
+.carousel-item.active {
+    opacity: 1;
+    transition: opacity 0s ease, transform 0.5s ease-in-out;
+}
+
+/* Animación de acercamiento (zoom) y cambio de imagen */
 .carousel-item img {
     object-fit: cover;
     height: 100%;
     width: 100%;
-    transition: transform 0.5s ease;
+    transition: transform 2.5s ease-in-out;
 }
 
 .carousel-item.active img {
-    transform: scale(1.00);
-
+    transform: scale(1); /* Acercamiento suave */
 }
+
+.carousel-item:not(.active) img {
+    transform: scale(2); /* Vuelve al tamaño original */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .titles-section h2.contact-title {
     font-size: 5rem;
@@ -113,6 +166,7 @@ html {
     cursor: pointer;
     animation: bounce 2s ease-in-out 3;
     animation-fill-mode: forwards;
+    z-index: 3;
 }
 
 @keyframes bounce {
@@ -386,7 +440,7 @@ input {
 @media screen and (max-width: 768px) {
     .hero-section {
         height: 50vh;
-        
+
     }
 
     .titles-section {
