--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -127,11 +127,12 @@ html {
 
 .scroll-down-indicator {
     position: absolute;
-    bottom: 90px;
+    bottom: 30%;
     left: 50%;
     transform: translateX(-50%);
     font-size: 3.5rem;
-    color: white;
+    color: white;    
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.301);
     cursor: pointer;
     animation: bounce 2s ease-in-out 3;
     animation-fill-mode: forwards;
@@ -172,7 +173,7 @@ html {
 /* ===== SUBTITULO ===== */
 .subtitle-container {
     background: #88b8c2;
-    padding: 7vh;
+    padding: 8vh;
     box-shadow: 0px 4px 8px #88b8c2(39, 208, 214, 0.692);
 }
 
@@ -215,16 +216,24 @@ html {
 /* ===== Sección de Contacto ===== */
 .contact {
     padding-top: 100px;
-    padding-bottom: 50px;
-    box-shadow: 0 0px 200px #5986c5;
+    padding-bottom: 100px;
+    box-shadow: 0 0px 200px #446ba1;
 
 }
+.contact-form {
+    background-color: #ffffff;
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
 
 
 .contact-container {
     background-color: #ffffff;
     border-radius: 10px;
     overflow: hidden;
+    margin-top: 50px;
     margin-bottom: 50px;
 }
 
@@ -273,14 +282,6 @@ html {
 }
 
 
-.contact-form {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
 
 
 
@@ -327,22 +328,21 @@ textarea.form-control {
 
 
 .form-group {
-    margin-bottom: 20px;
+    margin-bottom: 150px;
 }
 
 .form-group label {
     font-weight: 600;
     font-size: 0.9rem;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     color: #333;
 }
 
 input {
     width: 100%;
-    padding: 10px 0;
+    padding: 40px 0;
     border: none;
     border-bottom: 1px solid #ccc;
-    border-radius: 0;
     font-size: 0.9rem;
 }
 
