--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -218,6 +218,7 @@ html {
     padding-top: 100px;
     padding-bottom: 100px;
     box-shadow: 0 0px 200px #446ba1;
+    
 
 }
 .contact-form {
@@ -225,6 +226,7 @@ html {
     padding: 20px;
     max-width: 800px;
     margin: 0 auto;
+    
 }
 
 
@@ -235,6 +237,8 @@ html {
     overflow: hidden;
     margin-top: 50px;
     margin-bottom: 50px;
+    box-shadow: 0 0px 100px #446ba169;
+
 }
 
 
