--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -19,6 +19,30 @@ input[type=number]::-webkit-outer-spin-button {
     transition: all 0.3s;
 }
 
+
+
+
+
+.container {
+    width: 80%;
+    /* Ajuste basado en el tamaño de la pantalla */
+    margin: 0 auto;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 html {
     scroll-behavior: smooth;
 }
@@ -131,7 +155,7 @@ html {
     left: 50%;
     transform: translateX(-50%);
     font-size: 3.5rem;
-    color: white;    
+    color: white;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.301);
     cursor: pointer;
     animation: bounce 2s ease-in-out 3;
@@ -218,15 +242,16 @@ html {
     padding-top: 100px;
     padding-bottom: 100px;
     box-shadow: 0 0px 200px #446ba1;
-    
+
 
 }
+
 .contact-form {
     background-color: #ffffff;
     padding: 20px;
     max-width: 800px;
     margin: 0 auto;
-    
+
 }
 
 
@@ -405,6 +430,7 @@ input {
 
 
 /* ===== Media Queries ===== */
+
 
 @media screen and (max-width: 768px) {
     .hero-section {
