--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -158,7 +158,7 @@ html {
     color: white;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.301);
     cursor: pointer;
-    animation: bounce 2s ease-in-out 3;
+    animation: bounce 2s ease-in-out infinite;
     animation-fill-mode: forwards;
     z-index: 3;
 }
@@ -434,37 +434,88 @@ input {
 
 @media screen and (max-width: 768px) {
     .hero-section {
-        height: 50vh;
-
+        height: 76vh;
     }
 
-    .titles-section {
-        top: 30%;
-        /* Ajusta si el título está demasiado alto o bajo */
+
+
+
+    .contact-container {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        border-radius: 8px;
+        box-shadow: none;
+        padding: 10px;
+        background-color: #f8f8f8; /* Fondo más claro para un look minimalista */
     }
 
-    .contact-title {
-        font-size: 3rem;
-        /* Ajusta el tamaño del título si es necesario */
-    }
-
-    .contact-subtitle {
-        font-size: 1.3rem;
-        /* Ajusta el tamaño del subtítulo */
-    }
-
-    .contact-left h3 {
-        font-size: 1.5rem;
-        /* Ajusta el tamaño del texto en la columna izquierda */
+    .contact-left {
+        background-image: none; /* Elimina la imagen de fondo */
+        text-align: center;
+        padding: 20px;
     }
 
     .contact-right {
-        padding: 15px;
-        /* Ajusta el padding si es necesario */
+        padding: 20px;
     }
 
-    .contact-form {
-        padding: 15px;
-        /* Ajusta el padding del formulario */
+    /* Estilo de los inputs y formulario */
+    .form-control {
+        border: 1px solid #ddd; /* Cambia el borde para un look más minimalista */
+        padding: 12px;
+        font-size: 0.9rem;
     }
+
+    .form-group {
+        margin-bottom: 20px;
+        /* Reduce el margen para un diseño más compacto */
+    }
+
+    .form-group label {
+        font-weight: normal;
+        font-size: 0.9rem;
+        margin-bottom: 10px;
+        color: #333;
+    }
+
+    input,
+    textarea {
+        width: 100%;
+        padding: 10px;
+        border-radius: 4px;
+    }
+
+    .button-container {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .btn-success.btn-small.custom-btn {
+        width: auto;
+        min-width: 100px;
+        padding: 10px 15px;
+        font-size: 0.9rem;
+        font-weight: bold;
+        background-color: #0e4c9c;
+        border: none;
+        border-radius: 4px;
+        color: white;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .btn-success.btn-small.custom-btn:hover {
+        background-color: #2a52b0;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+        transform: translateY(-1px);
+    }
+
+
+
+
+
+
+
+
 }
